--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 <br>
 <br>
 <a href="http://localhost:5000/FUBSO/Enrichment_30">Enrichment 3.0</a>
+<br>
+<br>
+<a href="http://localhost:5000/FUBSO/logout">Logout</a>
 </center>
 </body>
 </html>
